update the application packager